--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <div class="destination" id="rome">
                 <h2>Rome</h2>
             </div>
+
+            <div class="destination" id="scotland">
+                <h2>Scotland</h2>
+            </div>
         </div>
     </div>
 
